--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     <p>Metodo de pago: <span id="method-display"></span></span>
                                     </p>
                                     <p>Comentarios: <span id="comment-display"></span></p>
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                    <button type="button" class="btn btn-secondary" onclick="emptyCart()" data-dismiss="modal">Cerrar</button>
                                 </div>
                             </div>
                         </div>
